# jgrants-gradio-mcp-server

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
jgrants_mcp_server/: __main__.py  dual_mode.py  gradio_app.py  gradio_mcp_app.py
