[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jgrants-mcp-server"
version = "0.1.0"
description = "Jグランツ補助金情報提供MCPサーバー - Gradio 5 Native MCP統合"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Sunwood AI Labs", email = "info@sunwood-ai-labs.com" }
]
keywords = ["mcp", "gradio", "jgrants", "subsidy", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=2.12.4",
    "httpx>=0.28.1",
    "requests>=2.31.0",
    "uvicorn>=0.31.1",
    "python-dotenv>=1.0.0",
    "pdfplumber>=0.11.7",
    "markitdown>=0.1.3",
    "gradio>=5.32.0",  # Native MCP server support requires 5.32.0+
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/Sunwood-ai-labs/jgrants-gradio-mcp-server"
Documentation = "https://github.com/Sunwood-ai-labs/jgrants-gradio-mcp-server#readme"
Repository = "https://github.com/Sunwood-ai-labs/jgrants-gradio-mcp-server.git"
Issues = "https://github.com/Sunwood-ai-labs/jgrants-gradio-mcp-server/issues"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["jgrants_mcp_server"]
